--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
     font-style: normal;
   }
   .bg-gradient-custom {
-    background: linear-gradient(to right,#B16D40, #000000);
+    background: linear-gradient(to right,#B16D40, #000000 70%);
   }
   .bg-Respons-costum {
     background: linear-gradient(167.98deg, #B16D40 0%, #4C2F1B 47.92%, #000000 100%);
@@ -16,6 +16,12 @@
 @layer utilities{
   .center-flex{
     @apply flex justify-center items-center
+  }
+  .class-input{
+    @apply w-full py-3 px-4 text-[1.3rem] rounded-[15px]
+  }
+  .error-message{
+   @apply p-2 text-red-500 font-semibold
   }
   body{
     @apply bg-neutral-900
