--- a/src/index.css
+++ b/src/index.css
@@ -18,13 +18,26 @@
     @apply flex justify-center items-center
   }
   .class-input{
-    @apply w-full py-3 px-4 text-[1.3rem] rounded-[15px]
+    @apply w-full py-3 px-4 text-[1.3rem] rounded-[15px]  outline-1 outline-black
   }
+  
   .error-message{
    @apply p-2 text-red-500 font-semibold
   }
+  .form-button{
+    @apply rounded-[10px] py-3 w-[120px] bg-black text-white duration-500 hover:bg-white hover:text-black hover:border-black hover:font-semibold
+  }
   body{
     @apply bg-neutral-900
+  }
+  .footer-page{
+    @apply border w-[90%] h-[80%]  bg-white p-7 rounded-[10px] text-black
+  }
+  .footer-container{
+    @apply md:container md:mx-auto  center-flex flex-col h-fit w-full md:w-[80vw] lg:w-[70vw] py-3 text-black
+  }
+  .header-button{
+    @apply h-max items-center justify-center duration-500 md:h-[8vh] w-[120px] rounded-[13px] py-2 md:py-0 font-semibold
   }
 
 }
