--- a/src/output.css
+++ b/src/output.css
@@ -1068,6 +1068,18 @@ html {
   height: max-content;
 }
 
+.h-\[75vh\] {
+  height: 75vh;
+}
+
+.h-\[74vh\] {
+  height: 74vh;
+}
+
+.h-\[76vh\] {
+  height: 76vh;
+}
+
 .min-h-\[70\.2vh\] {
   min-height: 70.2vh;
 }
@@ -1114,6 +1126,18 @@ html {
 
 .w-full {
   width: 100%;
+}
+
+.basis-\[80\%\] {
+  flex-basis: 80%;
+}
+
+.basis-\[75\%\] {
+  flex-basis: 75%;
+}
+
+.basis-1\/3 {
+  flex-basis: 33.333333%;
 }
 
 .cursor-pointer {
