--- a/src/output.css
+++ b/src/output.css
@@ -1027,8 +1027,12 @@ html {
   height: 30vh;
 }
 
-.h-\[47vh\] {
-  height: 47vh;
+.h-\[50p\] {
+  height: 50p;
+}
+
+.h-\[55vh\] {
+  height: 55vh;
 }
 
 .h-\[59\.7vh\] {
@@ -1039,12 +1043,16 @@ html {
   height: 62.3vh;
 }
 
+.h-\[70vh\] {
+  height: 70vh;
+}
+
 .h-\[74\.2vh\] {
   height: 74.2vh;
 }
 
-.h-\[75\.5vh\] {
-  height: 75.5vh;
+.h-\[74\.3vh\] {
+  height: 74.3vh;
 }
 
 .h-\[7vh\] {
@@ -1068,30 +1076,6 @@ html {
   height: max-content;
 }
 
-.h-\[75vh\] {
-  height: 75vh;
-}
-
-.h-\[74vh\] {
-  height: 74vh;
-}
-
-.h-\[76vh\] {
-  height: 76vh;
-}
-
-.h-\[74\.3vh\] {
-  height: 74.3vh;
-}
-
-.h-\[76\.2vh\] {
-  height: 76.2vh;
-}
-
-.h-\[76\.1vh\] {
-  height: 76.1vh;
-}
-
 .min-h-\[70\.2vh\] {
   min-height: 70.2vh;
 }
@@ -1100,24 +1084,16 @@ html {
   min-height: 70.3vh;
 }
 
-.min-h-\[71vh\] {
-  min-height: 71vh;
-}
-
-.min-h-\[72vh\] {
-  min-height: 72vh;
-}
-
-.min-h-\[72\.4vh\] {
-  min-height: 72.4vh;
-}
-
-.min-h-\[72\.3vh\] {
-  min-height: 72.3vh;
+.min-h-\[74\.2vh\] {
+  min-height: 74.2vh;
 }
 
 .w-\[10px\] {
   width: 10px;
+}
+
+.w-\[15vw\] {
+  width: 15vw;
 }
 
 .w-\[20vw\] {
@@ -1140,32 +1116,24 @@ html {
   width: 50px;
 }
 
+.w-\[50vw\] {
+  width: 50vw;
+}
+
 .w-\[60px\] {
   width: 60px;
+}
+
+.w-\[70vh\] {
+  width: 70vh;
 }
 
 .w-\[90\%\] {
   width: 90%;
 }
 
-.w-\[90vw\] {
-  width: 90vw;
-}
-
 .w-full {
   width: 100%;
-}
-
-.basis-\[80\%\] {
-  flex-basis: 80%;
-}
-
-.basis-\[75\%\] {
-  flex-basis: 75%;
-}
-
-.basis-1\/3 {
-  flex-basis: 33.333333%;
 }
 
 .cursor-pointer {
@@ -1194,6 +1162,10 @@ html {
 
 .justify-between {
   justify-content: space-between;
+}
+
+.justify-around {
+  justify-content: space-around;
 }
 
 .justify-evenly {
@@ -1333,9 +1305,8 @@ html {
   padding: 1.25rem;
 }
 
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+.p-7 {
+  padding: 1.75rem;
 }
 
 .px-7 {
@@ -1389,6 +1360,10 @@ html {
   font-size: 1.12rem;
 }
 
+.text-\[1\.1rem\] {
+  font-size: 1.1rem;
+}
+
 .text-\[1\.2rem\] {
   font-size: 1.2rem;
 }
@@ -1399,6 +1374,10 @@ html {
 
 .text-\[1\.4rem\] {
   font-size: 1.4rem;
+}
+
+.text-\[1\.5rem\] {
+  font-size: 1.5rem;
 }
 
 .text-\[1\.7rem\] {
@@ -1424,10 +1403,6 @@ html {
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
-}
-
-.text-\[1\.5rem\] {
-  font-size: 1.5rem;
 }
 
 .font-bold {
@@ -1508,14 +1483,18 @@ html {
   transition-duration: 500ms;
 }
 
-.form-button:hover {
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-  font-weight: 600;
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
+@media (min-width: 1024px) {
+  @media (hover: hover) and (pointer: fine) {
+    .form-button:hover {
+      --tw-border-opacity: 1;
+      border-color: rgb(0 0 0 / var(--tw-border-opacity));
+      --tw-bg-opacity: 1;
+      background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+      font-weight: 600;
+      --tw-text-opacity: 1;
+      color: rgb(0 0 0 / var(--tw-text-opacity));
+    }
+  }
 }
 
 body {
@@ -1614,26 +1593,6 @@ body {
   background: linear-gradient(167.98deg, #B16D40 0%, #4C2F1B 47.92%, #000000 100%);
 }
 
-.hover\:bg-black:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-white:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.hover\:text-neutral-900:hover {
-  --tw-text-opacity: 1;
-  color: rgb(23 23 23 / var(--tw-text-opacity));
-}
-
-.hover\:text-white:hover {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 @media (min-width: 340px) {
   .xs\:flex {
     display: flex;
@@ -1667,10 +1626,12 @@ body {
     font-size: 1.1rem;
   }
 
-  .xs\:hover\:scale-\[1\.04\]:hover {
-    --tw-scale-x: 1.04;
-    --tw-scale-y: 1.04;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  @media (hover: hover) and (pointer: fine) {
+    .xs\:hover\:scale-\[1\.04\]:hover {
+      --tw-scale-x: 1.04;
+      --tw-scale-y: 1.04;
+      transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+    }
   }
 }
 
@@ -1713,6 +1674,10 @@ body {
     border-radius: 45px;
   }
 
+  .md\:p-5 {
+    padding: 1.25rem;
+  }
+
   .md\:text-\[1\.3rem\] {
     font-size: 1.3rem;
   }
@@ -1721,19 +1686,36 @@ body {
     font-size: 1.4rem;
   }
 
-  .md\:hover\:scale-105:hover {
-    --tw-scale-x: 1.05;
-    --tw-scale-y: 1.05;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  @media (hover: hover) and (pointer: fine) {
+    .md\:hover\:scale-105:hover {
+      --tw-scale-x: 1.05;
+      --tw-scale-y: 1.05;
+      transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+    }
+
+    .md\:hover\:bg-black:hover {
+      --tw-bg-opacity: 1;
+      background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+    }
+
+    .md\:hover\:bg-white:hover {
+      --tw-bg-opacity: 1;
+      background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+    }
+
+    .md\:hover\:text-neutral-900:hover {
+      --tw-text-opacity: 1;
+      color: rgb(23 23 23 / var(--tw-text-opacity));
+    }
+
+    .md\:hover\:text-white:hover {
+      --tw-text-opacity: 1;
+      color: rgb(255 255 255 / var(--tw-text-opacity));
+    }
   }
 }
 
 @media (min-width: 1280px) {
-  .lg\:size-\[70px\] {
-    width: 70px;
-    height: 70px;
-  }
-
   .lg\:w-\[15vw\] {
     width: 15vw;
   }
