--- a/src/output.css
+++ b/src/output.css
@@ -636,16 +636,6 @@ video {
   z-index: 30;
 }
 
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.mx-5 {
-  margin-left: 1.25rem;
-  margin-right: 1.25rem;
-}
-
 .mx-6 {
   margin-left: 1.5rem;
   margin-right: 1.5rem;
@@ -660,6 +650,13 @@ video {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 1;
+}
+
+.line-clamp-2 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
 }
 
 .flex {
@@ -732,12 +729,48 @@ video {
   height: max-content;
 }
 
+.h-\[25vh\] {
+  height: 25vh;
+}
+
+.h-\[2vh\] {
+  height: 2vh;
+}
+
+.h-\[60vh\] {
+  height: 60vh;
+}
+
+.h-\[59\.8vh\] {
+  height: 59.8vh;
+}
+
+.h-\[59\.9vh\] {
+  height: 59.9vh;
+}
+
+.h-\[62vh\] {
+  height: 62vh;
+}
+
+.h-\[62\.3vh\] {
+  height: 62.3vh;
+}
+
+.h-\[62\.5vh\] {
+  height: 62.5vh;
+}
+
 .min-h-\[74\.2vh\] {
   min-height: 74.2vh;
 }
 
 .w-\[10px\] {
   width: 10px;
+}
+
+.w-\[10vw\] {
+  width: 10vw;
 }
 
 .w-\[20vw\] {
@@ -764,16 +797,16 @@ video {
   width: 60px;
 }
 
-.w-\[6vw\] {
-  width: 6vw;
-}
-
 .w-\[80vw\] {
   width: 80vw;
 }
 
 .w-full {
   width: 100%;
+}
+
+.w-\[15vw\] {
+  width: 15vw;
 }
 
 .cursor-pointer {
@@ -870,10 +903,6 @@ video {
   border-top-right-radius: 35px;
 }
 
-.rounded-bl-\[20px\] {
-  border-bottom-left-radius: 20px;
-}
-
 .rounded-bl-\[21px\] {
   border-bottom-left-radius: 21px;
 }
@@ -945,6 +974,11 @@ video {
   padding-right: 0.5rem;
 }
 
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
 .px-7 {
   padding-left: 1.75rem;
   padding-right: 1.75rem;
@@ -975,11 +1009,6 @@ video {
   padding-bottom: 1.75rem;
 }
 
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-
 .pb-1 {
   padding-bottom: 0.25rem;
 }
@@ -990,6 +1019,10 @@ video {
 
 .text-\[\.8rem\] {
   font-size: .8rem;
+}
+
+.text-\[0\.8rem\] {
+  font-size: 0.8rem;
 }
 
 .text-\[1\.12rem\] {
@@ -1032,10 +1065,6 @@ video {
   font-size: 3rem;
 }
 
-.text-\[0\.8rem\] {
-  font-size: 0.8rem;
-}
-
 .font-bold {
   font-weight: 700;
 }
@@ -1062,6 +1091,10 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.no-underline {
+  text-decoration-line: none;
 }
 
 .backdrop-blur-lg {
@@ -1240,6 +1273,13 @@ body {
 }
 
 @media (min-width: 768px) {
+  .md\:line-clamp-1 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+  }
+
   .md\:flex {
     display: flex;
   }
@@ -1269,6 +1309,10 @@ body {
     width: 50vw;
   }
 
+  .md\:w-\[6vw\] {
+    width: 6vw;
+  }
+
   .md\:w-\[80\%\] {
     width: 80%;
   }
@@ -1276,6 +1320,14 @@ body {
   .md\:w-fit {
     width: -moz-fit-content;
     width: fit-content;
+  }
+
+  .md\:w-\[8vw\] {
+    width: 8vw;
+  }
+
+  .md\:w-\[7vw\] {
+    width: 7vw;
   }
 
   .md\:grid-cols-2 {
@@ -1334,20 +1386,12 @@ body {
     width: 15vw;
   }
 
-  .lg\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
   .lg\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .lg\:p-3 {
     padding: 0.75rem;
-  }
-
-  .lg\:text-\[1\.5rem\] {
-    font-size: 1.5rem;
   }
 
   .lg\:text-\[1\.4rem\] {
