--- a/src/index.css
+++ b/src/index.css
@@ -31,10 +31,10 @@
     @apply bg-neutral-900
   }
   .footer-page{
-    @apply border w-[90%] h-[80%]  bg-white p-7 rounded-[10px] text-black
+    @apply border  w-[90%]  bg-white p-7 rounded-[10px] text-black
   }
   .footer-container{
-    @apply md:container md:mx-auto  center-flex flex-col h-fit w-full md:w-[80vw] lg:w-[70vw] py-3 text-black
+    @apply md:container md:mx-auto  center-flex flex-col h-fit w-full md:w-[60vw]  py-3 text-black
   }
   .header-button{
     @apply items-center justify-center duration-500 w-[120px] rounded-[13px] py-3 font-semibold
