--- a/src/output.css
+++ b/src/output.css
@@ -652,13 +652,6 @@ video {
   -webkit-line-clamp: 1;
 }
 
-.line-clamp-2 {
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 2;
-}
-
 .flex {
   display: flex;
 }
@@ -700,6 +693,18 @@ video {
   height: 59.7vh;
 }
 
+.h-\[60vh\] {
+  height: 60vh;
+}
+
+.h-\[62\.5vh\] {
+  height: 62.5vh;
+}
+
+.h-\[65vh\] {
+  height: 65vh;
+}
+
 .h-\[74\.2vh\] {
   height: 74.2vh;
 }
@@ -729,48 +734,12 @@ video {
   height: max-content;
 }
 
-.h-\[25vh\] {
-  height: 25vh;
-}
-
-.h-\[2vh\] {
-  height: 2vh;
-}
-
-.h-\[60vh\] {
-  height: 60vh;
-}
-
-.h-\[59\.8vh\] {
-  height: 59.8vh;
-}
-
-.h-\[59\.9vh\] {
-  height: 59.9vh;
-}
-
-.h-\[62vh\] {
-  height: 62vh;
-}
-
-.h-\[62\.3vh\] {
-  height: 62.3vh;
-}
-
-.h-\[62\.5vh\] {
-  height: 62.5vh;
-}
-
 .min-h-\[74\.2vh\] {
   min-height: 74.2vh;
 }
 
 .w-\[10px\] {
   width: 10px;
-}
-
-.w-\[10vw\] {
-  width: 10vw;
 }
 
 .w-\[20vw\] {
@@ -801,12 +770,20 @@ video {
   width: 80vw;
 }
 
+.w-\[90\%\] {
+  width: 90%;
+}
+
 .w-full {
   width: 100%;
 }
 
-.w-\[15vw\] {
-  width: 15vw;
+.flex-1 {
+  flex: 1 1 0%;
+}
+
+.flex-\[3\] {
+  flex: 3;
 }
 
 .cursor-pointer {
@@ -879,6 +856,10 @@ video {
 
 .rounded-\[20px\] {
   border-radius: 20px;
+}
+
+.rounded-\[25px\] {
+  border-radius: 25px;
 }
 
 .rounded-\[30px\] {
@@ -961,6 +942,10 @@ video {
   padding: 0.75rem;
 }
 
+.p-4 {
+  padding: 1rem;
+}
+
 .p-5 {
   padding: 1.25rem;
 }
@@ -992,11 +977,6 @@ video {
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
-}
-
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
 }
 
 .py-6 {
@@ -1076,11 +1056,6 @@ video {
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-
-.text-red-500 {
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .text-stone-600 {
@@ -1170,7 +1145,6 @@ body {
 }
 
 .footer-page {
-  height: 80%;
   width: 90%;
   border-radius: 10px;
   border-width: 1px;
@@ -1233,13 +1207,7 @@ body {
   .footer-container {
     margin-left: auto;
     margin-right: auto;
-    width: 80vw;
-  }
-}
-
-@media (min-width: 1024px) {
-  .footer-container {
-    width: 70vw;
+    width: 60vw;
   }
 }
 
@@ -1273,13 +1241,6 @@ body {
 }
 
 @media (min-width: 768px) {
-  .md\:line-clamp-1 {
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 1;
-  }
-
   .md\:flex {
     display: flex;
   }
@@ -1309,8 +1270,8 @@ body {
     width: 50vw;
   }
 
-  .md\:w-\[6vw\] {
-    width: 6vw;
+  .md\:w-\[7vw\] {
+    width: 7vw;
   }
 
   .md\:w-\[80\%\] {
@@ -1320,14 +1281,6 @@ body {
   .md\:w-fit {
     width: -moz-fit-content;
     width: fit-content;
-  }
-
-  .md\:w-\[8vw\] {
-    width: 8vw;
-  }
-
-  .md\:w-\[7vw\] {
-    width: 7vw;
   }
 
   .md\:grid-cols-2 {
