--- a/src/index.css
+++ b/src/index.css
@@ -2,42 +2,50 @@
 @tailwind components;
 @tailwind utilities;
 @font-face {
-    font-family: 'MyCustomFont';
-    src: url('/Inter-Italic-VariableFont_opsz,wght.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+  font-family: "MyCustomFont";
+  src: url("/Inter-Italic-VariableFont_opsz,wght.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+.bg-gradient-custom {
+  background: linear-gradient(to right, #b16d40, #000000 70%);
+}
+.bg-Respons-costum {
+  background: linear-gradient(
+    167.98deg,
+    #b16d40 0%,
+    #4c2f1b 47.92%,
+    #000000 100%
+  );
+}
+.container {
+  width: 100%;
+}
+@layer utilities {
+  .center-flex {
+    @apply flex justify-center items-center;
   }
-  .bg-gradient-custom {
-    background: linear-gradient(to right,#B16D40, #000000 70%);
-  }
-  .bg-Respons-costum {
-    background: linear-gradient(167.98deg, #B16D40 0%, #4C2F1B 47.92%, #000000 100%);
-  }
-@layer utilities{
-  .center-flex{
-    @apply flex justify-center items-center
-  }
-  .class-input{
-    @apply w-full py-3 px-4 text-[1.3rem] rounded-[15px]  outline-1 outline-black
-  }
-  
-  .error-message{
-   @apply p-2 text-red-500 font-semibold
-  }
-  .form-button{
-    @apply rounded-[10px] py-3 w-[120px] bg-black text-white duration-500 md:hover:bg-white md:hover:text-black md:hover:border-black md:hover:font-semibold
-  }
-  body{
-    @apply bg-neutral-900
-  }
-  .footer-page{
-    @apply border  w-[90%]  bg-white p-7 rounded-[10px] text-black
-  }
-  .footer-container{
-    @apply md:container md:mx-auto  center-flex flex-col h-fit w-full md:w-[60vw]  py-3 text-black
-  }
-  .header-button{
-    @apply items-center justify-center duration-500 w-[120px] rounded-[13px] py-3 font-semibold
+  .class-input {
+    @apply w-full py-3 px-4 text-[1.3rem] rounded-[15px]  outline-1 outline-black;
   }
 
+  .error-message {
+    @apply p-2 text-red-500 font-semibold;
+  }
+  .form-button {
+    @apply rounded-[10px] py-3 w-[120px] bg-black text-white duration-500 md:hover:bg-white md:hover:text-black md:hover:border-black md:hover:font-semibold;
+  }
+  body {
+    @apply bg-neutral-900;
+  }
+
+  .footer-page {
+    @apply border w-[90%]  bg-white p-7 rounded-[10px] text-black;
+  }
+  .footer-container {
+    @apply md:container md:mx-auto  center-flex flex-col h-fit w-full md:w-[60vw]  py-3 text-black;
+  }
+  .header-button {
+    @apply items-center justify-center duration-500 w-[120px] rounded-[13px] py-3 font-semibold;
+  }
 }
