--- a/src/output.css
+++ b/src/output.css
@@ -669,6 +669,10 @@ video {
   height: 50px;
 }
 
+.h-\[100vh\] {
+  height: 100vh;
+}
+
 .h-\[10px\] {
   height: 10px;
 }
@@ -726,15 +730,6 @@ video {
   height: max-content;
 }
 
-.h-\[100vh\] {
-  height: 100vh;
-}
-
-.h-fit {
-  height: -moz-fit-content;
-  height: fit-content;
-}
-
 .min-h-\[74\.2vh\] {
   min-height: 74.2vh;
 }
@@ -783,24 +778,13 @@ video {
   flex: 1 1 0%;
 }
 
-.flex-\[3\] {
-  flex: 3;
-}
-
 .flex-\[4\] {
   flex: 4;
-}
-
-
-.flex-\[6\] {
-  flex: 6;
 }
 
 .flex-\[8\] {
   flex: 8;
 }
-
-
 
 .cursor-pointer {
   cursor: pointer;
@@ -866,10 +850,6 @@ video {
   gap: 1.75rem;
 }
 
-.overflow-hidden {
-  overflow: hidden;
-}
-
 .rounded-\[10px\] {
   border-radius: 10px;
 }
@@ -910,15 +890,6 @@ video {
 
 .rounded-bl-\[21px\] {
   border-bottom-left-radius: 21px;
-}
-
-.border-2 {
-  border-width: 2px;
-}
-
-.border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .bg-black {
@@ -997,6 +968,11 @@ video {
   padding-right: 1.25rem;
 }
 
+.px-7 {
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -1007,19 +983,14 @@ video {
   padding-bottom: 0.75rem;
 }
 
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
 }
 
 .py-7 {
   padding-top: 1.75rem;
   padding-bottom: 1.75rem;
-}
-
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
 }
 
 .pb-1 {
@@ -1028,6 +999,10 @@ video {
 
 .text-center {
   text-align: center;
+}
+
+.text-\[\.8rem\] {
+  font-size: .8rem;
 }
 
 .text-\[\.9rem\] {
@@ -1329,10 +1304,6 @@ body {
   .md\:w-fit {
     width: -moz-fit-content;
     width: fit-content;
-  }
-
-  .md\:flex-\[8\] {
-    flex: 8;
   }
 
   .md\:grid-cols-2 {
